	using this column, and initialize it, rather than depending on 
	gtk_tree_model_get() to initialize it. The compiler can't detect these 
	possible unitialized uses.

2007-06-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* Configurable idle delays
	* Configurable get-message service shutdown timeouts
	* Notifying the observers of a folder when a remove happens
	* Added tny_mime_part_set_header_pair

	* This was a major API change
	
2007-06-11  Philip Van Hoof  <pvanhoof@gnome.org>

	* The summary camel-lite code no longer puts the uid field in the mmap
	* Several race conditions fixed with the IDLE support
	* The IDLE support is no longer happening in a GMainLoop, but now in a
	thread. This so that the ui of applications on top of Tinymail wont
	hang with very high latency networks like GPRS (experimental)
	* Parallel fetching messages while you are retrieving summary
	(experimental)
	* Race condition fixes when expunged messages didn't get correctly
	removed (for whatever reason in the TnyFolderMonitor): more robust
	* Fixed some IDLE deadlocks
	* Added tny_camel_pop_store_account_reconnect
	* Bugfix for SSL support of camel-lite's SMTP provider

	* This was a minor API change

2007-06-08  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.c: Add the tree
	model as an observer of the root folder stores

2007-06-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* tny_folder_poke_status fixes
	* Unread and total count fixes
	* Total and ~unread even when the folder was never refreshed
	* Support for the Content-Disposition header in mime parts
	* Some bugfixes in the SMTP support
	* Bugfix in the TnyFolderMonitor

2007-06-08  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-msg-header.c: added support to set
	priority flags through set_flags/unset_flags. The flags are
	properly converted to X-Priority and X-MSMail-Priority headers.

2007-06-07  Sergio Villar Senin  <svillar@igalia.com>
