@@ -853,7 +853,7 @@ gpg_ctx_parse_status (struct _GpgCtx *gpg, CamelException *ex)
 			gpg->send_passwd = TRUE;
 		} else {
 			if (!camel_exception_is_set (ex))
-				camel_exception_set (ex, CAMEL_EXCEPTION_USER_CANCEL, _("Canceled."));
+				camel_exception_set (ex, CAMEL_EXCEPTION_USER_CANCEL, "Canceled.");
 			return -1;
 		}
 		
@@ -1055,7 +1055,7 @@ gpg_ctx_op_step (struct _GpgCtx *gpg, CamelException *ex)
 		goto exception;
 
 	if ((polls[5].revents & POLLIN) && camel_operation_cancel_check(NULL)) {
-		camel_exception_set(ex, CAMEL_EXCEPTION_USER_CANCEL, _("Canceled."));
+		camel_exception_set(ex, CAMEL_EXCEPTION_USER_CANCEL, "Canceled.");
 		gpg_ctx_op_cancel(gpg);
 		return -1;
 	}
