@@ -57,7 +57,8 @@ typedef enum {
 } TnyErrorDomain;
 
 typedef enum {
-	TNY_ERROR_UNSPEC = 1
+	TNY_ERROR_UNSPEC = 1,
+
 	TNY_FOLDER_ERROR_SYNC = 2,
 	TNY_FOLDER_ERROR_REMOVE_MSG = 3,
 	TNY_FOLDER_ERROR_ADD_MSG = 4,
@@ -65,7 +66,7 @@ typedef enum {
 	TNY_FOLDER_ERROR_GET_MSG = 6,
 	TNY_FOLDER_ERROR_TRANSFER_MSGS = 7,
 	TNY_FOLDER_ERROR_SET_NAME = 8,
-	TNY_FOLDER_ERROR_COPY = 9, 
+	TNY_FOLDER_ERROR_COPY = 9,
 
 	TNY_FOLDER_STORE_ERROR_REMOVE_FOLDER = 10,
 	TNY_FOLDER_STORE_ERROR_GET_FOLDERS = 11,
@@ -74,7 +75,14 @@ typedef enum {
 	TNY_TRANSPORT_ACCOUNT_ERROR_SEND = 13,
 
 	TNY_ACCOUNT_ERROR_TRY_CONNECT = 14,
-	TNY_ACCOUNT_STORE_ERROR_UNKNOWN_ALERT = 15
+
+	TNY_ACCOUNT_STORE_ERROR_UNKNOWN_ALERT = 15,
+
+	TNY_ACCOUNT_ERROR_GET_SUPPORTED_AUTH = 16,
+
+	TNY_SEND_QUEUE_ERROR_ADD = 17,
+
+	TNY_ACCOUNT_STORE_ERROR_CANCEL_ALERT = 18,
 } TnyError;
 
 typedef enum  {
